package MachineCoding_LLD.LLD_Interview_Problems._01_Easy_ParkingLotSystem.model;

public class Car extends Vehicle {
    public Car(String licensePlate) {
        super(licensePlate, VehicleType.CAR);
    }
}
