package MachineCoding_LLD.LLD_Interview_Problems._01_Easy_ParkingLotSystem.model;

public class Motorcycle extends Vehicle {
    public Motorcycle(String licensePlate) {
        super(licensePlate, VehicleType.MOTORCYCLE);
    }
}
