package MachineCoding_LLD.LLD_Interview_Problems._01_Easy_ParkingLotSystem.model;

public class Truck extends Vehicle {
    public Truck(String licensePlate) {
        super(licensePlate, VehicleType.TRUCK);
    }
}
